# NDS8-2019-Group-820

./: .gitignore  README.md  assignment network.py
FDIM miniproject/: Miniprojet FDIM.py  Thumbs.db  checkpointing.asv  checkpointing.m  detection.tgn  failuremodes.tgn  fmeaschema (1).tgn  rpn.tgn  soschema.tgn  viberti.py
NPA/: AssignmentMM4A_Availability_Tarik.m  HenrikAssignment2Pierre  Miniproject1HenrikFLOW.m  Miniproject2HenrikFLOWCOLOUR.m  henrik_assignment5  r.py  (+3 more)
Project/Custom Shell/: CMakeLists.txt  LDAPClient.cpp  LDAPClient.h  Makefile  Shell.cpp  Shell.h  ShellCommand.h  code.c  header.hpp  main.c  main.cpp  non_transfered.c  readme.md
Project/Custom Shell/src/: header.hpp  main.cpp
Project/Custom Shell/src/ldap/: LDAPClient.cpp  LDAPClient.h
Project/Custom Shell/src/ldaplib/: LDAPAddRequest.h  LDAPAsynConnection.h  LDAPAttribute.h  LDAPBindRequest.h  LDAPCompareRequest.h  LDAPConnection.h  LDAPConstraints.cpp  LDAPConstraints.h  LDAPControlSet.h  LDAPDeleteRequest.h  LDAPEntry.h  LDAPException.h  LDAPExtRequest.h  LDAPExtResult.h  LDAPMessage.h  LDAPMessageQueue.h  LDAPModDNRequest.h  LDAPModList.h  LDAPModification.h  LDAPModifyRequest.h  LDAPRebind.h  LDAPRequest.h  LDAPResult.h  LDAPSaslBindResult.h  LDAPSearchReference.h  LDAPSearchRequest.cpp  LDAPSearchRequest.h  LDAPSearchResult.h  LDAPSearchResults.h  LDAPUrl.h  LDAPUrlList.h  LdifReader.h  LdifWriter.h  SaslInteraction.cpp
Project/Custom Shell/src/logging/: Logger.cpp  Logger.h
Project/Custom Shell/src/shell/: CritSys.h  Shell.cpp  Shell.h  ShellCommand.h  Terminal.cpp  Terminal.h
(+75 files in other folders)
